# darling-perl

./: .gitignore  CMakeLists.txt  README.md  perl-bundles.txt  perl-output.txt
5.16/: CMakeLists.txt
5.18/: .gitignore  CMakeLists.txt  extract.sh
5.18/cpan/Digest-SHA/: shasum
5.18/perl/: .clist  .cout  .deptmp  Configure  Makefile  Policy.sh  config.h  config.sh  config_h.SH  doio.c  miniperlmain.c  myconfig  perl.c  perlio.c  perlmain.c  perly.act  pp_pack.c  pp_sys.c  realclean.sh  util.c  veryclean.sh
5.18/perl/UU/: av.c.c  deb.c.c  doio.c.c  doop.c.c  dump.c.c  globals.c.c  gv.c.c  hv.c.c  keywords.c.c  locale.c.c  mathoms.c.c  mg.c.c  mro.c.c  numeric.c.c  op.c.c  pad.c.c  perl.c.c  perlapi.c.c  perlio.c.c  perly.c.c  pp.c.c  pp_ctl.c.c  pp_hot.c.c  pp_pack.c.c  pp_sort.c.c  pp_sys.c.c  reentr.c.c  regcomp.c.c  regexec.c.c  run.c.c  scope.c.c  sv.c.c  taint.c.c  toke.c.c  universal.c.c  utf8.c.c  util.c.c
5.18/perl/cpan/Archive-Extract/: Makefile  Makefile.old
5.18/perl/cpan/Archive-Tar/: Makefile  Makefile.old
5.18/perl/cpan/AutoLoader/: Makefile  Makefile.old
5.18/perl/cpan/B-Debug/: Makefile  Makefile.old
5.18/perl/cpan/B-Lint/: Makefile  Makefile.old
5.18/perl/cpan/CGI/: Makefile  Makefile.old
5.18/perl/cpan/CPAN/: Makefile  Makefile.old
5.18/perl/cpan/CPAN-Meta/: Makefile  Makefile.old
5.18/perl/cpan/CPAN-Meta-Requirements/: Makefile  Makefile.old
5.18/perl/cpan/CPAN-Meta-YAML/: Makefile  Makefile.old
5.18/perl/cpan/CPANPLUS/: Makefile  Makefile.old
5.18/perl/cpan/CPANPLUS-Dist-Build/: Makefile  Makefile.old
5.18/perl/cpan/Compress-Raw-Bzip2/: Makefile  Makefile.PL  Makefile.old  constants.h
5.18/perl/cpan/Compress-Raw-Zlib/: Makefile  Makefile.PL  Makefile.old  constants.h
5.18/perl/cpan/Config-Perl-V/: Makefile  Makefile.old
5.18/perl/cpan/DB_File/: DB_File.c  Makefile  Makefile.PL  Makefile.old  constants.h
5.18/perl/cpan/Devel-PPPort/: Makefile  Makefile.old  RealPPPort.c  RealPPPort.xs
5.18/perl/cpan/Digest/: Makefile  Makefile.old
5.18/perl/cpan/Digest-MD5/: MD5.c  Makefile  Makefile.old
5.18/perl/cpan/Digest-SHA/: Makefile  Makefile.old  SHA.c
5.18/perl/cpan/Encode/: Makefile  Makefile.old  def_t.c  def_t.exh  def_t.h
5.18/perl/cpan/ExtUtils-Constant/: Makefile  Makefile.old
5.18/perl/cpan/ExtUtils-MakeMaker/: Makefile  Makefile.old
5.18/perl/cpan/File-CheckTree/: Makefile  Makefile.old
5.18/perl/cpan/File-Fetch/: Makefile  Makefile.old
5.18/perl/cpan/File-Path/: Makefile  Makefile.old
5.18/perl/cpan/File-Temp/: Makefile  Makefile.old
5.18/perl/cpan/Filter-Util-Call/: Makefile  Makefile.old
5.18/perl/cpan/Getopt-Long/: Makefile  Makefile.old
5.18/perl/cpan/HTTP-Tiny/: Makefile  Makefile.old
5.18/perl/cpan/IO-Compress/: Makefile  Makefile.old
5.18/perl/cpan/IO-Zlib/: Makefile  Makefile.old
5.18/perl/cpan/IPC-Cmd/: Makefile  Makefile.old
5.18/perl/cpan/IPC-SysV/: Makefile  Makefile.old  const-c.inc
5.18/perl/cpan/JSON-PP/: Makefile  Makefile.old
5.18/perl/cpan/List-Util/: Makefile  Makefile.old
5.18/perl/cpan/Locale-Codes/: Makefile  Makefile.old
5.18/perl/cpan/Locale-Maketext-Simple/: Makefile  Makefile.old
5.18/perl/cpan/Log-Message/: Makefile  Makefile.old
5.18/perl/cpan/Log-Message-Simple/: Makefile  Makefile.old
5.18/perl/cpan/MIME-Base64/: Makefile  Makefile.old
5.18/perl/cpan/Math-Complex/: Makefile  Makefile.old
5.18/perl/cpan/Memoize/: Makefile  Makefile.old
5.18/perl/cpan/Module-Build/: Makefile  Makefile.old
5.18/perl/cpan/Module-Load/: Makefile  Makefile.old
5.18/perl/cpan/Module-Load-Conditional/: Makefile  Makefile.old
5.18/perl/cpan/Module-Loaded/: Makefile  Makefile.old
5.18/perl/cpan/Module-Metadata/: Makefile  Makefile.old
5.18/perl/cpan/Module-Pluggable/: Makefile  Makefile.old
5.18/perl/cpan/NEXT/: Makefile  Makefile.old
5.18/perl/cpan/Object-Accessor/: Makefile  Makefile.old
5.18/perl/cpan/Package-Constants/: Makefile  Makefile.old
5.18/perl/cpan/Params-Check/: Makefile  Makefile.old
5.18/perl/cpan/Parse-CPAN-Meta/: Makefile  Makefile.old
5.18/perl/cpan/Perl-OSType/: Makefile  Makefile.old
5.18/perl/cpan/PerlIO-via-QuotedPrint/: Makefile  Makefile.old
5.18/perl/cpan/Pod-Checker/: Makefile  Makefile.old
5.18/perl/cpan/Pod-Escapes/: Makefile  Makefile.old
5.18/perl/cpan/Pod-LaTeX/: Makefile  Makefile.old  pod2latex
5.18/perl/cpan/Pod-Parser/: Makefile  Makefile.old
5.18/perl/cpan/Pod-Perldoc/: Makefile  Makefile.old
5.18/perl/cpan/Pod-Simple/: Makefile  Makefile.old
5.18/perl/cpan/Pod-Usage/: Makefile  Makefile.old
5.18/perl/cpan/Socket/: Makefile  Makefile.old
5.18/perl/cpan/Sys-Syslog/: Makefile  Makefile.old  Syslog.c
5.18/perl/cpan/Term-ANSIColor/: Makefile  Makefile.old
5.18/perl/cpan/Term-Cap/: Makefile  Makefile.old
5.18/perl/cpan/Term-UI/: Makefile  Makefile.old
5.18/perl/cpan/Test/: Makefile  Makefile.old
5.18/perl/cpan/Test-Harness/: Makefile  Makefile.old
5.18/perl/cpan/Test-Simple/: Makefile  Makefile.old
5.18/perl/cpan/Text-Balanced/: Makefile  Makefile.old
5.18/perl/cpan/Text-ParseWords/: Makefile  Makefile.old
5.18/perl/cpan/Text-Soundex/: Makefile  Makefile.old
5.18/perl/cpan/Text-Tabs/: Makefile  Makefile.old
5.18/perl/cpan/Tie-RefHash/: Makefile  Makefile.old
5.18/perl/cpan/Time-HiRes/: Makefile  Makefile.old  const-c.inc  xdefine
5.18/perl/cpan/Time-Local/: Makefile  Makefile.old
5.18/perl/cpan/Time-Piece/: Makefile  Makefile.old
5.18/perl/ext/B/: B.c  (+2 more)
5.18/perl/hints/: darwin.sh
5.18/perl/lib/: Config_heavy.pl  buildcustomize.pl
5.18/perl/pod/: Makefile  roffitall
5.18/perl/utils/: perlbug  perlivp
5.18/perl/x2p/: GNUmakefile  Makefile
5.28/: .gitignore  CMakeLists.txt  extract.sh
5.28/perl/: Configure  GNUmakefile  GNUmakefile.old  Policy.sh  README.macosx  cflags  config.sh  config_h.SH  doio.c  miniperlmain.c  myconfig  perl.c  perlio.c  perly.act  perly.tab  pp_sys.c  realclean.sh  veryclean.sh
5.28/perl/hints/: darwin.sh
5.28/perl/lib/: Config_heavy.pl  buildcustomize.pl
5.28/perl/pod/: Makefile  roffitall
5.28/perl/utils/: perlbug
(+3338 files in other folders)
